# Procesamiento-de-imagenes

./: README.txt  clase_octave_15-03.txt
Tarea1/: CMakeLists.txt  Image.cpp
mariposas/: cube_90.scad
practica/: rotacion.m
practica_leccion_11/Leccion11/: correlacion.m  ejconv.m
proyecto1/: CMakeLists.txt  README.txt  calibrate_Proyection.cpp  presentacion.txt
proyecto1/Imagenes/: DataCam.yml
proyecto1/referencias/: ajedrez.docx  calibrar (copia).cpp  capturA  captura.cpp  example_proyect.cpp  ogre-test-0.0.3.tgz
proyecto1/referencias/CalibracionCamaraOpencv/: Code_CalibrateSimpleCameraOpencv3.0.0.txt  Code_SaveImagesOpencv3.0.0.txt  DataCam.yml
tarea3/: CMakeLists.txt  source_code.cpp
